--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma <span class="text-primary"> r </span> y</h3>
             <ul>
@@ -23,6 +23,17 @@
             </ul>
         </nav>
 
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greating">Hi, I am</h3>
+                <div class="banner title">Abu Naeem</div>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
+    
     </header>
 
     <main>
