--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greating">Hi, I am</h3>
-                <div class="banner title">Abu Naeem</div>
-                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <div class="banner-title"> Abu Naeem </div>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
@@ -37,7 +37,12 @@
     </header>
 
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+        </section>
     </main>
 
 </body>
