--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <input type="email" placeholder="Your Email" name="" id="">
                 <textarea name="" placeholder="Message" id="" cols="30" rows="10">
                 </textarea>
-                <input class="btn-primary" type="submit" value="submit">
+                <input class="btn-primary" type="submit" value="Submit">
 
             </form>
         </div>
